build_err.txt
C:\Users\admin\Desktop\trading_terminal_cpp\src\views\MarketWatchWindow\MarketWatchWindow.cpp: In member function 'void MarketWatchWindow::setupZeroCopyMode()':
C:\Users\admin\Desktop\trading_terminal_cpp\src\views\MarketWatchWindow\MarketWatchWindow.cpp:206:39: error: 'requestTokenSubscription' is not a member of 'MarketWatchWindow'
     connect(this, &MarketWatchWindow::requestTokenSubscription,
                                       ^~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\admin\Desktop\trading_terminal_cpp\src\views\MarketWatchWindow\MarketWatchWindow.cpp: In member function 'void MarketWatchWindow::onZeroCopyTimerUpdate()':
C:\Users\admin\Desktop\trading_terminal_cpp\src\views\MarketWatchWindow\MarketWatchWindow.cpp:310:16: error: cannot decompose non-array non-class type 'PriceCacheTypes::ConsolidatedMarketData*'
     for (auto& [token, dataPtr] : m_tokenDataPointers) {
                ^~~~~~~~~~~~~~~~
mingw32-make[2]: *** [CMakeFiles\TradingTerminal.dir\build.make:539: CMakeFiles/TradingTerminal.dir/src/views/MarketWatchWindow/MarketWatchWindow.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:208: CMakeFiles/TradingTerminal.dir/all] Error 2
mingw32-make: *** [makefile:135: all] Error 2
